# Sensors_parsing

./: CMakeLists.txt  main.cpp
lib/: data.txt  sensor.cpp  sensor.h  sensorsList.cpp  sensorsList.h
